# RideShala

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DATA_LICENSE  LICENSE  Makefile  README.md  RideShala_Legal_OpenSource_Plan_v2.md  THIRD_PARTY_LICENSES  pyproject.toml  test_llm.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/web/: next.config.js  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
data/migrations/: 001_create_qdrant_collection.py  002_setup_meilisearch.py
data/seeds/: bikes_india_top30.json  seed_db.py
docs/: ai-pipeline.md  api.md  architecture.md  deployment.md  legal-compliance.md  model-card.md  scaling.md  setup.md
infra/: docker-compose.yml
infra/docker/: Dockerfile.api  Dockerfile.web
notebooks/: eda_bikes.py
services/api/: alembic.ini  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: 2026_04_08_001_initial_schema.py
services/api/app/: config.py  errors.py  main.py
services/api/app/api/routes/: chat.py  compare.py  contributions.py  feedback.py  health.py  privacy.py  reviews.py  ride_plan.py  specs.py  tracking.py
services/api/app/middleware/: auth.py  rate_limiter.py
services/api/app/services/: moderation.py
services/api/tests/: conftest.py  test_chat.py  test_compare.py  test_health.py  test_reviews.py  test_specs.py
tests/load/: locustfile.py
